[project]
name = "atlas-cmms-mcp"
version = "1.0.0"
description = "MCP server for Atlas CMMS (Grashjs) — 15 tools, 194 operations"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "client.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
